# app/models/Role.js
@@ -25,12 +25,12 @@ class Role extends CoreModel {
     }
 
 
-    static async findShopCategories(shopID) {
+    static async findShopCategories(shopId) {
 
-        const result = await db.query(`SELECT category.id, category.name FROM category JOIN shop_has_category ON shop_has_category.category_id = category.id WHERE shop_has_category.shop_id = $1;`, [shopID]);
+        const result = await db.query(`SELECT category.id, category.name FROM category JOIN shop_has_category ON shop_has_category.category_id = category.id WHERE shop_has_category.shop_id = $1;`, [shopId]);
 
         if (result.rowCount===0) {
-            throw new Error(`No match found for Categories'shop with shop is  "${shopID}".`);
+            throw new Error(`No match found for Categories'shop with shop is  "${shopId}".`);
         }
 
         const categoriesList = [];
